# mcp_graph_greeter

./: .env.example  .flake8  .gitignore  LICENSE  README.md  REFACTOR_PLAN.md  __init__.py  api.py  cli.py  config.py  core.py  demo.py  greeter_service.py  langgraph.json  mcp_graph_greeter.py  mcp_servers.py  prd.txt  pyproject.toml  setup.py
config/: __init__.py  loader.py  schema.py
config/servers/: context7.json  filesystem.json  shell.json
tests/: test_config.py  test_config_loader.py  test_greeter.py
