[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp_graph_greeter"
version = "0.1.0"
description = "A LangGraph demo using Model Context Protocol for filesystem operations"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Claude", email = "noreply@anthropic.com"}
]
dependencies = [
    "langchain>=0.1.0",
    "langchain-openai>=0.0.1",
    "langgraph>=0.0.20",
    "langchain-mcp-adapters>=0.1.0",
    "typing-extensions>=4.7.0",
    "python-dotenv>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "uvx",
    "langgraph-cli[inmem]"
]

[tool.setuptools]
packages = {find = {where = ["."], include = ["*.py"]}}
py-modules = ["mcp_graph_greeter", "config"]
